# python-project-50

./: .gitignore  Makefile  README.md  makefile  pyproject.toml
.github/workflows/: action.yml  pytest-coverage.yml  pytest.yml
gendiff/: __init__.py
gendiff/scripts/: gendiff.py
tests/: test_diff.py  test_gendiff.py
tests/fixtures/: hex_result_plain.py  hex_result_stylish.py  result_json.py  result_json.txt  result_nested.py  result_plain.py  result_stylish.py
tests/fixtures/files/: file1.yaml  file2.yaml
